============================
Release date: TBA

* Fix a crash in the ``unsupported-membership-test`` checker when assigning
  multiple constants to class attributes including ``__iter__`` via unpacking.

  Closes #6366

* Asterisks are no longer required in Sphinx and Google style parameter documentation
  for ``missing-param-doc`` and are parsed correctly.

  Closes #5815
  Closes #5406

* Fixed an ``AstroidError`` in 2.13.0 raised by the ``duplicate-code`` checker with
  ``ignore-imports`` or ``ignore-signatures`` enabled.

  Closes #6301


What's New in Pylint 2.13.5?
============================
Release date: 2022-04-06

* Fix false positive regression in 2.13.0 for ``used-before-assignment`` for
  homonyms between variable assignments in try/except blocks and variables in
  subscripts in comprehensions.

  Closes #6069
  Closes #6136

* ``lru-cache-decorating-method`` has been renamed to ``cache-max-size-none`` and
  will only be emitted when ``maxsize`` is ``None``.

  Closes #6180

* Fix false positive for ``unused-import`` when disabling both ``used-before-assignment`` and ``undefined-variable``.

  Closes #6089

* Narrow the scope of the ``unnecessary-ellipsis`` checker to:
  * functions & classes which contain both a docstring and an ellipsis.
  * A body which contains an ellipsis ``nodes.Expr`` node & at least one other statement.

* Fix false positive for ``used-before-assignment`` for assignments taking place via
  nonlocal declarations after an earlier type annotation.

  Closes #5394

* Fix crash for ``redefined-slots-in-subclass`` when the type of the slot is not a const or a string.

  Closes #6100

* Only raise ``not-callable`` when all the inferred values of a property are not callable.

  Closes #5931


* Fix a false negative for ``subclassed-final-class`` when a set of other messages were disabled.


What's New in Pylint 2.13.4?
============================
Release date: 2022-03-31
