@@ -31,6 +31,11 @@ Release date: TBA
   Closes #5815
   Closes #5406
 
+* Fixed a false positive for ``unused-variable`` when a builtin specified in
+  ``--additional-builtins`` is given a type annotation.
+
+  Closes #6388
+
 * Fixed an ``AstroidError`` in 2.13.0 raised by the ``duplicate-code`` checker with
   ``ignore-imports`` or ``ignore-signatures`` enabled.
 
